--- a/src/config/locale/messages/en/pages/photo-effects.json
+++ b/src/config/locale/messages/en/pages/photo-effects.json
@@ -388,7 +388,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-mimic?type=AI站立一字马"
+                "url": "/video-effects/ai-mimic?type=AI 站立一字马"
               },
               {
                 "id": "模仿-reze舞",
@@ -403,7 +403,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-mimic?type=Reze舞"
+                "url": "/video-effects/ai-mimic?type=Reze 舞"
               },
               {
                 "id": "模仿-叉腰扭臂",
@@ -493,7 +493,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/art-style?type=AI局部留色视频特效"
+                "url": "/photo-effects/art-style?type=AI 局部留色"
               },
               {
                 "id": "艺术-ai御龙飞行视频",
@@ -508,7 +508,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/art-style?type=AI御龙飞行视频"
+                "url": "/photo-effects/art-style?type=AI 御龙飞行"
               },
               {
                 "id": "艺术-冰雕",
@@ -538,7 +538,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-visual-effects-photo?type=AI爆炸效果"
+                "url": "/photo-effects/ai-visual-effects-photo?type=AI 爆炸效果"
               },
               {
                 "id": "视觉效果-史诗级爆炸漫步",
@@ -628,7 +628,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-role-swap-photo?type=AI老虎拥抱"
+                "url": "/photo-effects/ai-role-swap-photo?type=AI 老虎拥抱"
               },
               {
                 "id": "角色切换-坐上豪车",
@@ -811,7 +811,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-俄罗斯女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=俄罗斯女友"
               },
               {
                 "id": "ai-fake-date-印度女友",
@@ -826,7 +826,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-印度女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=印度女友"
               },
               {
                 "id": "ai-fake-date-女友约会",
@@ -841,7 +841,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-女友约会"
+                "url": "/photo-effects/ai-fake-date-photo?type=女友约会"
               },
               {
                 "id": "ai-fake-date-日本女友",
@@ -856,7 +856,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-日本女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=日本女友"
               },
               {
                 "id": "ai-fake-date-法国女友",
@@ -871,7 +871,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-法国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=法国女友"
               },
               {
                 "id": "ai-fake-date-美国女友",
@@ -886,7 +886,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-美国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=美国女友"
               }
             ]
           },
@@ -907,7 +907,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-咬嘴唇之吻"
+                "url": "/photo-effects/ai-kissing-photo?type=咬嘴唇之吻"
               },
               {
                 "id": "ai-kissing-正常接吻",
@@ -922,7 +922,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-正常接吻"
+                "url": "/photo-effects/ai-kissing-photo?type=正常接吻"
               },
               {
                 "id": "ai-kissing-法式接吻",
@@ -937,7 +937,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-法式接吻"
+                "url": "/photo-effects/ai-kissing-photo?type=法式接吻"
               },
               {
                 "id": "ai-kissing-脸颊之吻",
@@ -952,7 +952,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-脸颊之吻"
+                "url": "/photo-effects/ai-kissing-photo?type=脸颊之吻"
               },
               {
                 "id": "ai-kissing-额头之吻",
@@ -967,7 +967,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-额头之吻"
+                "url": "/photo-effects/ai-kissing-photo?type=额头之吻"
               }
             ]
           },
@@ -988,7 +988,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-selfie-with-celebrities-名人合拍"
+                "url": "/photo-effects/ai-celebrity-selfie?type=名人合拍"
               }
             ]
           },
@@ -1009,7 +1009,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-侧身依抱"
+                "url": "/photo-effects/hug-generator?type=侧身依抱"
               },
               {
                 "id": "hug-公主抱",
@@ -1024,7 +1024,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-公主抱"
+                "url": "/photo-effects/hug-generator?type=公主抱"
               },
               {
                 "id": "hug-托举式抱",
@@ -1039,7 +1039,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-托举式抱"
+                "url": "/photo-effects/hug-generator?type=托举式抱"
               },
               {
                 "id": "hug-拥抱",
@@ -1054,7 +1054,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-拥抱"
+                "url": "/photo-effects/hug-generator?type=拥抱"
               },
               {
                 "id": "hug-背后环抱",
@@ -1069,7 +1069,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-背后环抱"
+                "url": "/photo-effects/hug-generator?type=背后环抱"
               }
             ]
           },
@@ -1090,7 +1090,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/jiggle-抖动身体"
+                "url": "/video-effects/ai-jiggle?type=抖动身体"
               }
             ]
           },
@@ -1111,7 +1111,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/muscle-肌肉展示"
+                "url": "/photo-effects/ai-muscle-photo?type=肌肉展示"
               }
             ]
           },
@@ -1132,7 +1132,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/pregnant-ai-怀孕"
+                "url": "/photo-effects/ai-pregnant-photo?type=怀孕"
               }
             ]
           },
