--- a/src/config/locale/messages/en/pages/video-effect-details.json
+++ b/src/config/locale/messages/en/pages/video-effect-details.json
@@ -1078,7 +1078,7 @@
       }
     }
   },
-  "visual-effects": {
+  "ai-visual-effects": {
     "metadata": {
       "title": "AI Visual Effects - Creative Visual Effects",
       "description": "Use AI technology to add stunning visual effects to photos, including explosion effects, ocean dress, dimension crossing and more."
