--- a/src/config/locale/messages/zh/pages/video-effect-details.json
+++ b/src/config/locale/messages/zh/pages/video-effect-details.json
@@ -1077,7 +1077,7 @@
       }
     }
   },
-  "visual-effects": {
+  "ai-visual-effects": {
     "metadata": {
       "title": "AI 视觉效果 - 创意视觉特效",
       "description": "使用 AI 技术为照片添加震撼的视觉效果,包括爆炸效果、海洋连衣裙、穿越维度等。"
