--- a/项目分析报告.md
+++ b/项目分析报告.md
@@ -761,7 +761,305 @@ graph TD
 
 ---
 
-## 十三、关键技术架构总结
+## 十三、Effects 卡片跳转详情页实现详解
+
+本章节详细说明用户点击 Effects 卡片后如何跳转到对应详情页的完整实现逻辑。
+
+### 13.1 整体架构流程
+
+```mermaid
+graph TD
+    A[用户点击 Effect 卡片] --> B[EffectCard 组件]
+    B --> C{读取 item.url}
+    C --> D[Link 组件导航]
+    D --> E{URL 路径判断}
+    E -->|/video-effects/slug| F[video-effects/[slug]/page.tsx]
+    E -->|/photo-effects/slug| G[photo-effects/[slug]/page.tsx]
+    F --> H[ToolDetailTemplate]
+    G --> H
+    H --> I[从 tools.ts 获取工具配置]
+    I --> J[渲染详情页]
+```
+
+### 13.2 核心文件及作用
+
+| 文件路径 | 作用 |
+|---------|------|
+| `src/data/tools.ts` | **数据源**：定义所有工具的 slug、类型、特效项目列表，是跳转 URL 的唯一真实来源 |
+| `src/themes/default/blocks/effect-card.tsx` | **卡片组件**：渲染单个特效卡片，包含跳转链接 |
+| `src/themes/default/blocks/effects-section.tsx` | **列表组件**：渲染特效卡片网格，遍历调用 EffectCard |
+| `src/app/[locale]/(landing)/photo-effects/[slug]/page.tsx` | **图片特效详情页路由** |
+| `src/app/[locale]/(landing)/video-effects/[slug]/page.tsx` | **视频特效详情页路由** |
+| `src/themes/default/templates/ToolDetailTemplate.tsx` | **详情页模板**：统一处理详情页渲染逻辑 |
+
+### 13.3 数据流详解
+
+#### 13.3.1 tools.ts 数据结构
+
+```typescript
+// src/data/tools.ts
+export interface Tool {
+  slug: string;      // URL 路径标识，如 'ai-kissing'
+  title: string;     // 显示标题
+  type: ToolType;    // 'video' | 'photo'
+  items: ToolItem[]; // 该工具下的所有特效项目
+}
+
+export interface ToolItem {
+  title: string;        // 特效名称
+  originalSrc: string;  // 原图路径
+  effectSrc: string;    // 效果图路径
+  videoSrc?: string;    // 视频路径（可选）
+  badge?: string;       // 标签如 'HOT', 'NEW'
+}
+```
+
+#### 13.3.2 URL 生成规则
+
+根据工具类型 (type) 生成不同的 URL 前缀：
+- **视频特效**: `/video-effects/{slug}`
+- **图片特效**: `/photo-effects/{slug}`
+
+示例：
+```typescript
+const detailUrl = tool.type === 'video' 
+  ? `/video-effects/${tool.slug}` 
+  : `/photo-effects/${tool.slug}`;
+// 如: /video-effects/ai-kissing 或 /photo-effects/hug-generator
+```
+
+### 13.4 EffectCard 组件实现
+
+```typescript
+// src/themes/default/blocks/effect-card.tsx
+export function EffectCard({ item, itemsLabel, buttonText }: {...}) {
+  return (
+    <Link
+      href={item.url || '#'}  // 跳转目标 URL
+      onMouseEnter={handleMouseEnter}
+      onMouseLeave={handleMouseLeave}
+      className="group relative aspect-[4/5] rounded-3xl overflow-hidden cursor-pointer block"
+    >
+      {/* 原图展示 */}
+      {originalImage && (
+        <Image src={originalImage} alt={item.title} fill ... />
+      )}
+      
+      {/* 效果图 - 鼠标悬停显示 (图片特效) */}
+      {effectImage && !hasVideo && (
+        <Image src={effectImage} className="opacity-0 group-hover:opacity-100" ... />
+      )}
+      
+      {/* 视频 - 鼠标悬停播放 (视频特效) */}
+      {hasVideo && (
+        <video src={videoSrc} className="opacity-0 group-hover:opacity-100" ... />
+      )}
+      
+      {/* 标题和按钮 */}
+      ...
+    </Link>
+  );
+}
+```
+
+**关键点**：
+1. 使用 `@/core/i18n/navigation` 的 `Link` 组件实现国际化路由
+2. `item.url` 来自配置数据，格式为 `/video-effects/slug` 或 `/photo-effects/slug`
+3. 鼠标悬停时显示效果预览（图片切换或视频播放）
+
+### 13.5 EffectsSection 组件实现
+
+```typescript
+// src/themes/default/blocks/effects-section.tsx
+export function EffectsSection({ section, className }: {...}) {
+  const [activeTab, setActiveTab] = useState(section.tabs?.[0]?.id || 'video');
+
+  return (
+    <section>
+      {/* Tab 切换按钮 */}
+      <div className="flex flex-wrap justify-center gap-2">
+        {section.tabs?.map((tab: TabData) => (
+          <button onClick={() => setActiveTab(tab.id)} ...>
+            {tab.label}
+          </button>
+        ))}
+      </div>
+
+      {/* 卡片网格 */}
+      <div className="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
+        {section.tabs
+          ?.find((t: TabData) => t.id === activeTab)
+          ?.items.map((item: EffectItem, index: number) => (
+            <EffectCard 
+              key={index} 
+              item={item}  // 包含 url 属性
+              itemsLabel={section.items_label} 
+              buttonText={section.button_text}
+            />
+          ))}
+      </div>
+    </section>
+  );
+}
+```
+
+### 13.6 详情页路由处理
+
+#### 13.6.1 动态路由文件
+
+```typescript
+// src/app/[locale]/(landing)/video-effects/[slug]/page.tsx
+export default function VideoEffectDetailPage({
+  params,
+  searchParams,
+}: {
+  params: Promise<{ locale: string; slug: string }>;
+  searchParams: Promise<{ type?: string }>;
+}) {
+  return (
+    <ToolDetailTemplate 
+      params={params} 
+      namespace="pages.video-effect-details"  // 翻译命名空间
+      searchParams={searchParams}
+    />
+  );
+}
+```
+
+#### 13.6.2 ToolDetailTemplate 模板处理
+
+```typescript
+// src/themes/default/templates/ToolDetailTemplate.tsx
+export async function ToolDetailTemplate({ params, namespace, searchParams }) {
+  const { locale, slug } = await params;
+  
+  // 1. 从翻译文件获取页面数据
+  const t = await getTranslations({ locale, namespace });
+  if (!t.has(slug)) {
+    return notFound();  // slug 不存在则返回 404
+  }
+  
+  const effectData = t.raw(slug);
+  
+  // 2. 从 tools.ts 获取工具配置
+  const toolConfig = getToolConfig(slug);
+  
+  // 3. 转换数据格式
+  let examples = toolConfig?.items.map((item) => ({
+    category: item.title,
+    prompt: `Generate ${item.title} effect`,
+    image: item.effectSrc,
+    video: item.videoSrc,
+  })) || [];
+  
+  // 4. 构建相关工具列表（排除当前工具）
+  const relatedTools = tools.filter(t => 
+    t.type === toolType && t.slug !== slug
+  );
+  
+  // 5. 渲染详情页
+  return (
+    <ToolDetailLayout>
+      <ToolContent
+        toolName={effectData.page.title}
+        examples={examples}
+        toolType={toolType}
+        ...
+      />
+    </ToolDetailLayout>
+  );
+}
+```
+
+### 13.7 完整跳转流程图
+
+```mermaid
+sequenceDiagram
+    participant User as 用户
+    participant Card as EffectCard
+    participant Router as Next.js Router
+    participant Page as [slug]/page.tsx
+    participant Template as ToolDetailTemplate
+    participant Tools as tools.ts
+    participant I18n as 翻译文件
+
+    User->>Card: 点击特效卡片
+    Card->>Router: Link 跳转 /video-effects/ai-kissing
+    Router->>Page: 匹配动态路由 [slug]
+    Page->>Template: 调用 ToolDetailTemplate
+    Template->>Tools: getToolConfig('ai-kissing')
+    Tools-->>Template: 返回工具配置
+    Template->>I18n: getTranslations(namespace)
+    I18n-->>Template: 返回页面翻译数据
+    Template->>Template: 合并数据，构建页面
+    Template-->>User: 渲染详情页
+```
+
+### 13.8 URL 配置来源说明
+
+**重要**：卡片的 `url` 属性有两种配置来源：
+
+#### 来源一：JSON 翻译文件（首页/列表页）
+```json
+// src/config/locale/messages/en/pages/index.json
+{
+  "tabs": [{
+    "id": "video",
+    "label": "Video Effects",
+    "items": [{
+      "title": "AI Kissing",
+      "url": "/video-effects/ai-kissing",  // 直接配置 URL
+      "image": {...}
+    }]
+  }]
+}
+```
+
+#### 来源二：代码动态生成（详情页底部推荐）
+```typescript
+// src/themes/default/templates/ToolDetailTemplate.tsx
+const effectsGridProps = {
+  items: relatedTools.map(t => ({
+    title: t.title,
+    // 根据 tools.ts 中的 type 动态生成 URL
+    url: toolType === 'video' 
+      ? `/video-effects/${t.slug}` 
+      : `/photo-effects/${t.slug}`,
+  }))
+};
+```
+
+### 13.9 关键约束：URL 必须与 tools.ts 的 slug 一致
+
+为避免 404 错误，所有 Effect 卡片的 URL 必须满足：
+
+1. **URL 格式**: `/video-effects/{slug}` 或 `/photo-effects/{slug}`
+2. **slug 来源**: 必须是 `src/data/tools.ts` 中定义的有效 slug
+3. **类型匹配**: video 类型工具使用 `/video-effects/`，photo 类型使用 `/photo-effects/`
+
+```typescript
+// tools.ts 中定义的有效 slugs 示例
+const tools = [
+  { slug: 'ai-kissing', type: 'video', ... },
+  { slug: 'ai-muscle', type: 'video', ... },
+  { slug: 'hug-generator', type: 'photo', ... },
+  { slug: 'ai-kissing-photo', type: 'photo', ... },
+  // ...
+];
+```
+
+### 13.10 调试技巧
+
+当点击卡片出现 404 时，检查以下几点：
+
+1. 检查 `item.url` 的值是否正确
+2. 确认 URL 中的 slug 在 `tools.ts` 中存在
+3. 确认 slug 对应的 type 与 URL 前缀匹配
+4. 确认翻译文件中存在对应的 `namespace.slug` 配置
+
+---
+
+## 十四、关键技术架构总结
 
 ### 13.1 多数据库支持
 - PostgreSQL (默认)
