--- a/src/config/locale/messages/zh/pages/index.json
+++ b/src/config/locale/messages/zh/pages/index.json
@@ -238,7 +238,7 @@
                 "video": "/img_video/videos/AIKissing法式接吻.mp4",
                 "badge": "HOT",
                 "count": "1M+",
-                "url": "/video-effects/aikissing法式接吻"
+                "url": "/video-effects/ai-kissing?type=法式接吻"
               },
               {
                 "title": "正常接吻",
@@ -249,7 +249,7 @@
                 "video": "/img_video/videos/AiKissing_正常接吻.mp4",
                 "badge": "HOT",
                 "count": "1M+",
-                "url": "/video-effects/aikissing-正常接吻"
+                "url": "/video-effects/ai-kissing?type=正常接吻"
               },
               {
                 "title": "肌肉展示",
@@ -260,7 +260,7 @@
                 "video": "/img_video/videos/Muscle_肌肉展示.mp4",
                 "badge": "HOT",
                 "count": "1M+",
-                "url": "/video-effects/muscle-肌肉展示"
+                "url": "/video-effects/ai-muscle?type=肌肉展示"
               },
               {
                 "title": "肚皮舞",
@@ -271,7 +271,7 @@
                 "video": "/img_video/videos/AIDanceGenerator_肚皮舞.mp4",
                 "badge": "NEW",
                 "count": "50K",
-                "url": "/video-effects/aidancegenerator-肚皮舞"
+                "url": "/video-effects/ai-dance?type=肚皮舞"
               },
               {
                 "title": "侧身依抱",
@@ -282,7 +282,7 @@
                 "video": "/img_video/videos/hug_侧身依抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/hug-侧身依抱"
+                "url": "/video-effects/ai-hug?type=侧身依抱"
               },
               {
                 "title": "公主抱",
@@ -293,7 +293,7 @@
                 "video": "/img_video/videos/hug_公主抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/hug-公主抱"
+                "url": "/video-effects/ai-hug?type=公主抱"
               },
               {
                 "title": "托举式抱",
@@ -304,7 +304,7 @@
                 "video": "/img_video/videos/hug_托举式抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/hug-托举式抱"
+                "url": "/video-effects/ai-hug?type=托举式抱"
               },
               {
                 "title": "拥抱",
@@ -315,7 +315,7 @@
                 "video": "/img_video/videos/hug_拥抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/hug-拥抱"
+                "url": "/video-effects/ai-hug?type=拥抱"
               },
               {
                 "title": "背后环抱",
@@ -326,7 +326,7 @@
                 "video": "/img_video/videos/hug_背后环抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/hug-背后环抱"
+                "url": "/video-effects/ai-hug?type=背后环抱"
               },
               {
                 "title": "怀孕",
@@ -337,7 +337,7 @@
                 "video": "/img_video/videos/PregnantAI_怀孕.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/pregnantai-怀孕"
+                "url": "/photo-effects/ai-pregnant-photo?type=怀孕"
               },
               {
                 "title": "抖动身体",
@@ -348,7 +348,7 @@
                 "video": "/img_video/videos/jiggle_抖动身体.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/jiggle-抖动身体"
+                "url": "/video-effects/ai-jiggle?type=抖动身体"
               },
               {
                 "title": "中国女友",
@@ -359,7 +359,7 @@
                 "video": "/img_video/videos/AIFakeDate_中国女友.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/aifakedate-中国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=中国女友"
               }
             ]
           },
@@ -380,7 +380,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-kissing-咬嘴唇之吻"
+                "url": "/photo-effects/ai-kissing-photo?type=咬嘴唇之吻"
               },
               {
                 "title": "正常接吻",
@@ -394,7 +394,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-kissing-正常接吻"
+                "url": "/photo-effects/ai-kissing-photo?type=正常接吻"
               },
               {
                 "title": "法式接吻",
@@ -408,7 +408,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-kissing-法式接吻"
+                "url": "/photo-effects/ai-kissing-photo?type=法式接吻"
               },
               {
                 "title": "脸颊之吻",
@@ -422,7 +422,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-kissing-脸颊之吻"
+                "url": "/photo-effects/ai-kissing-photo?type=脸颊之吻"
               },
               {
                 "title": "额头之吻",
@@ -436,7 +436,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-kissing-额头之吻"
+                "url": "/photo-effects/ai-kissing-photo?type=额头之吻"
               },
               {
                 "title": "中国女友",
@@ -450,7 +450,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-fake-date-中国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=中国女友"
               },
               {
                 "title": "俄罗斯女友",
@@ -464,7 +464,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-fake-date-俄罗斯女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=俄罗斯女友"
               },
               {
                 "title": "印度女友",
@@ -478,7 +478,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-fake-date-印度女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=印度女友"
               },
               {
                 "title": "女友约会",
@@ -492,7 +492,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-fake-date-女友约会"
+                "url": "/photo-effects/ai-fake-date-photo?type=女友约会"
               },
               {
                 "title": "日本女友",
@@ -506,7 +506,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-fake-date-日本女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=日本女友"
               },
               {
                 "title": "法国女友",
@@ -520,7 +520,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-fake-date-法国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=法国女友"
               },
               {
                 "title": "美国女友",
@@ -534,7 +534,7 @@
                 },
                 "badge": "HOT",
                 "count": "500K+",
-                "url": "/photo-effects/ai-fake-date-美国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=美国女友"
               }
             ]
           }
